// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle should match enzyme mount snapshot 1`] = `
<Toggle
  isToggleOn={false}
  onToggle={[MockFunction]}
>
  <div>
    <p>
      Is toggled 
      OFF
    </p>
    <button
      onClick={[Function]}
    >
      Toggle
    </button>
    <button
      onClick={[Function]}
    >
      Toggle ON
    </button>
    <button
      onClick={[Function]}
    >
      Toggle OFF
    </button>
  </div>
</Toggle>
`;

exports[`Toggle should match enzyme mount snapshot 2`] = `
<Toggle
  isToggleOn={true}
  onToggle={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
    }
  }
>
  <div>
    <p>
      Is toggled 
      ON
    </p>
    <button
      onClick={[Function]}
    >
      Toggle
    </button>
    <button
      onClick={[Function]}
    >
      Toggle ON
    </button>
    <button
      onClick={[Function]}
    >
      Toggle OFF
    </button>
  </div>
</Toggle>
`;

exports[`Toggle should match enzyme mount snapshot 3`] = `
<Toggle
  isToggleOn={false}
  onToggle={
    [MockFunction] {
      "calls": Array [
        Array [],
        Array [],
      ],
    }
  }
>
  <div>
    <p>
      Is toggled 
      OFF
    </p>
    <button
      onClick={[Function]}
    >
      Toggle
    </button>
    <button
      onClick={[Function]}
    >
      Toggle ON
    </button>
    <button
      onClick={[Function]}
    >
      Toggle OFF
    </button>
  </div>
</Toggle>
`;

exports[`Toggle should match enzyme shallow snapshot 1`] = `
<div>
  <p>
    Is toggled 
    OFF
  </p>
  <button
    onClick={[Function]}
  >
    Toggle
  </button>
  <button
    onClick={[Function]}
  >
    Toggle ON
  </button>
  <button
    onClick={[Function]}
  >
    Toggle OFF
  </button>
</div>
`;

exports[`Toggle should match enzyme shallow snapshot 2`] = `
<div>
  <p>
    Is toggled 
    ON
  </p>
  <button
    onClick={[Function]}
  >
    Toggle
  </button>
  <button
    onClick={[Function]}
  >
    Toggle ON
  </button>
  <button
    onClick={[Function]}
  >
    Toggle OFF
  </button>
</div>
`;

exports[`Toggle should match enzyme shallow snapshot 3`] = `
<div>
  <p>
    Is toggled 
    OFF
  </p>
  <button
    onClick={[Function]}
  >
    Toggle
  </button>
  <button
    onClick={[Function]}
  >
    Toggle ON
  </button>
  <button
    onClick={[Function]}
  >
    Toggle OFF
  </button>
</div>
`;

exports[`Toggle should match react-test-renderer snapshot 1`] = `
<div>
  <p>
    Is toggled 
    OFF
  </p>
  <button
    onClick={[Function]}
  >
    Toggle
  </button>
  <button
    onClick={[Function]}
  >
    Toggle ON
  </button>
  <button
    onClick={[Function]}
  >
    Toggle OFF
  </button>
</div>
`;

exports[`Toggle should match react-test-renderer snapshot 2`] = `
<div>
  <p>
    Is toggled 
    ON
  </p>
  <button
    onClick={[Function]}
  >
    Toggle
  </button>
  <button
    onClick={[Function]}
  >
    Toggle ON
  </button>
  <button
    onClick={[Function]}
  >
    Toggle OFF
  </button>
</div>
`;

exports[`Toggle should match react-test-renderer snapshot 3`] = `
<div>
  <p>
    Is toggled 
    OFF
  </p>
  <button
    onClick={[Function]}
  >
    Toggle
  </button>
  <button
    onClick={[Function]}
  >
    Toggle ON
  </button>
  <button
    onClick={[Function]}
  >
    Toggle OFF
  </button>
</div>
`;
